scenarios/uc16-workload-scalability/resources/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  annotations:
    alpha.image.policy.openshift.io/resolve-names: '*'
    app.openshift.io/route-disabled: 'false'
    app.openshift.io/vcs-ref: ''
    app.openshift.io/vcs-uri: 'https://github.com/wael2000/php-cpu-intense'
    deployment.kubernetes.io/revision: '2'
    image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"scaling:latest","namespace":"scaling"},"fieldPath":"spec.template.spec.containers[?(@.name==\"scaling\")].image","paused":false}]'
    openshift.io/generated-by: OpenShiftWebConsole
  name: scaling
  namespace: scaling
  labels:
    app: scaling
    app.kubernetes.io/component: scaling
    app.kubernetes.io/instance: scaling
    app.kubernetes.io/name: scaling
    app.kubernetes.io/part-of: scaling
    app.openshift.io/runtime: php
    app.openshift.io/runtime-version: 8.2-ubi8
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scaling
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: scaling
        deployment: scaling
    spec:
      containers:
        - name: scaling
          image: 'image-registry.openshift-image-registry.svc:5000/scaling/scaling@sha256:bb894a1d9d8b64b0dc43a496069fa28b278dc5fce753bd6f2b9e646563ff845b'
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8443
              protocol: TCP
          resources:
            limits:
              cpu: 256m
              memory: 512Mi
            requests:
              cpu: 128m
              memory: 128Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
